Fixed jumping bug

--- a/css/base.css
+++ b/css/base.css
@@ -63,10 +63,6 @@ a:focus {
 	perspective: 1200px;
 }
 
-.animating .main {
-	overflow: hidden;
-}
-
 .container {
 	width: 100%;
 	height: 100%;
